#11197 [ 권한 ] 권한 검색 시, 깜빡임 발생
+ 미사용 scss 클래스 제거

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -3283,23 +3283,14 @@ select {
   border-top: 0.0625rem solid #CFD5D9;
 }
 
-.z-auth-content-edit,
-.z-role-content-edit,
-.z-code-content-edit,
-.z-cmdb-type-content-edit {
+.z-auth-content-edit {
   height: 41.25rem;
   margin: 0 0 1.875rem 0;
 }
-.z-auth-content-edit .edit-form,
-.z-role-content-edit .edit-form,
-.z-code-content-edit .edit-form,
-.z-cmdb-type-content-edit .edit-form {
+.z-auth-content-edit .edit-form {
   padding: 0 1.875rem 0 4.0625rem;
 }
-.z-auth-content-edit .edit-form .edit-row,
-.z-role-content-edit .edit-form .edit-row,
-.z-code-content-edit .edit-form .edit-row,
-.z-cmdb-type-content-edit .edit-form .edit-row {
+.z-auth-content-edit .edit-form .edit-row {
   margin-top: 0.625rem;
 }
 
@@ -3372,13 +3363,6 @@ select {
 .z-cmdb-attribute-content-edit .attribute,
 .z-scheduler-content-edit .attribute {
   margin-left: 4rem;
-}
-
-.z-numbering-rule-content-edit .select-pattern-type {
-  width: 20rem;
-}
-.z-numbering-rule-content-edit .pattern-type {
-  width: 7.5rem;
 }
 
 .z-cmdb-class-content-edit {
