--- a/src/main/resources/public/template/cmdb/attribute/attributeView.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeView.html
@@ -11,6 +11,7 @@
     <h6 class="description ml-2 pl-2" th:text="#{cmdb.attribute.msg.viewDescription}"></h6>
 </div>
 <div layout:fragment="pageView">
+    <input type="hidden" id="attributeId" name="attributeId" th:value="${attribute?.attributeId}"/>
     <div class="flex-column z-view-row">
         <label for="attributeName">
             <span th:text="#{cmdb.attribute.label.name}"></span>
@@ -56,22 +57,7 @@
 </body>
 <th:block layout:fragment="pageScript">
     <script th:src="@{/assets/js/workflow/zWorkflowUtil.js}"></script>
-    <script th:src="@{/assets/js/cmdb/zCmdbCore.js}"></script>
     <script th:src="@{/assets/js/cmdb/zCmdbAttribute.js}"></script>
-    <script type="text/javascript">
-        (function() {
-            zCmdbCore.initSession(JSON.stringify({
-                userKey : '[[${#authentication.details.userKey}]]',
-                userId : '[[${#authentication.details.userId}]]',
-                userName: '[[${#authentication.details.userName}]]',
-                email: '[[${#authentication.details.email}]]',
-                position: '[[${#authentication.details.position}]]',
-                department: '[[${#authentication.details.department}]]',
-                officeNumber: '[[${#authentication.details.officeNumber}]]',
-                mobileNumber: '[[${#authentication.details.mobileNumber}]]'
-            }));
-        })();
-    </script>
     <script type="text/javascript" th:inline="javascript">
         /*<![CDATA[*/
         const attributeData = /*[[${attribute?.attributeValue}]]*/ null;
