#11246 [ 회원가입 ] 툴팁 디자인 출력 오류

--- a/src/main/resources/public/scss/formDesigner/_variables.scss
+++ b/src/main/resources/public/scss/formDesigner/_variables.scss
@@ -183,3 +183,7 @@ $property-option-tb-content-btn-hv-color:          $blue500;
 $property-panel-border-color:                      $gray300;
 $property-panel-border-width:                      0.0625rem;
 $property-panel-icon-color:                        $blue500;
+
+//////////////////////////////// tooltip //////////////////////////////////
+$tooltip-contents-left:                            0;
+$tooltip-contents-width:                           100%;
