--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -4756,11 +4756,11 @@ table tbody tr:hover {
 }
 .z-help-tooltip .z-tooltip-contents {
   position: absolute;
-  left: 0;
+  left: auto;
   visibility: hidden;
   background-color: #FFFFFF;
   color: #339AF0;
-  width: 100%;
+  width: 28.125rem;
   font-size: 0.875rem;
   border: 0.125rem solid #339AF0;
   border-radius: 0.125rem;
