--- a/src/main/resources/public/scss/template/_file-uploader.scss
+++ b/src/main/resources/public/scss/template/_file-uploader.scss
@@ -198,6 +198,10 @@
             text-align: center;
             cursor: pointer;
 
+            &.added {
+              grid-column: 5;
+            }
+
             .z-icon {
               background: $file-uploader-icon-color;
               &:hover {
@@ -227,10 +231,6 @@
                 height: 3.5rem; // 56px
               }
             }
-          }
-
-          &:last-child {
-            grid-column: 5;
           }
         }
         // 이미지 디자인상 보이지 않음
