#11219 - categoryList 배열 비어있는지 체크해서 얼럿 띄우도록 수정

--- a/src/main/resources/public/template/board/boardEdit.html
+++ b/src/main/resources/public/template/board/boardEdit.html
@@ -210,7 +210,7 @@
             if (isEmpty('boardAdminTitle', 'board.msg.enterBoardTitle')) return;
 
             if (document.getElementById('categoryYn').checked) {
-                if (document.querySelector('#boardCategoryList > tr:first-child').classList.contains('no-data-found-list')) {
+                if (categoryList.length === 0) {
                     aliceAlert.alertWarning(i18n.msg('board.msg.createCategory'));
                     return;
                 }
