#11243 - [ 공지사항 ] 공지사항 상세조회 시, 제목이 가로로 길게 나타나는 현상 수정
.text-wordWrap라는 클래스명을 새로 생성하여 overflow-wrap(줄바꿈) 사용, 타이틀을 두 줄로 나타낼 수 있게 수정하였습니다.

--- a/src/main/resources/public/scss/template/utilities/_common.scss
+++ b/src/main/resources/public/scss/template/utilities/_common.scss
@@ -25,6 +25,11 @@
 .text-ellipsis {
   @include ellipsis();
 }
+//줄바꿈
+.text-wordWarp{
+  @include wordWrap();
+  text-align: center;
+}
 // 가로 선
 @include horizontalBar($horizontal-bar-width, 0.9375rem 0, $element-border-color); // 15px
 // 세로 선
