--- a/src/main/resources/public/template/notice/noticeView.html
+++ b/src/main/resources/public/template/notice/noticeView.html
@@ -12,7 +12,7 @@
 </div>
 <div layout:fragment="pageView">
     <div class="flex-column z-view-row">
-        <div class="view-title text-ellipsis" th:text="${notice?.noticeTitle}"></div>
+        <div class="view-title text-wordWarp" th:text="${notice?.noticeTitle}"></div>
     </div>
     <div class="flex-column z-view-row">
         <div class="view-sub-title flex-row justify-content-end">
