#11236 - 날짜 포맷 함수 추가

--- a/src/main/resources/public/template/numbering-rule/numberingRuleList.html
+++ b/src/main/resources/public/template/numbering-rule/numberingRuleList.html
@@ -24,7 +24,7 @@
         </td>
         <td style="width:30%;" class="align-left" id="ruleDesc" th:text="${rule.numberingDesc}"></td>
         <td style="width:20%;" class="align-left" id="ruleLatestValue" th:text="${rule.latestValue}"></td>
-        <td style="width:20%;" class="align-left" id="ruleLatestDate" th:text="${rule.latestDate}"></td>
+        <td style="width:20%;" class="align-left date-time" id="ruleLatestDate" th:text="${rule.latestDate}"></td>
     </tr>
     </tbody>
 </table>
