--- a/src/main/resources/public/template/numbering-rule/numberingRuleSearch.html
+++ b/src/main/resources/public/template/numbering-rule/numberingRuleSearch.html
@@ -46,12 +46,22 @@
             showProgressbar: false,
             callbackFunc: function (response) {
                 document.getElementById('ruleList').innerHTML = response.responseText;
+                setDateTimeFormat(document.getElementById('ruleList'));
                 OverlayScrollbars(document.querySelector('.z-list-body'), {
                     className: 'scrollbar'
                 });
             }
         };
         aliceJs.sendXhr(opt);
+    }
+
+    /**
+     * 서버에서 전달받은 데이터의 날짜 포맷을 변경한다.
+     */
+    function setDateTimeFormat(elem) {
+        elem.querySelectorAll('.date-time').forEach(dt => {
+            dt.textContent = i18n.userDateTime(dt.textContent.trim());
+        });
     }
     /*]]>*/
 </script>
