#11243 - [ 공지사항 ] 중앙정렬제거, user-name클래스 복구, 말줄임 사용하는 view페이지 마다 클래스명 변경, 작성자도 줄바꿈 추가

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -671,7 +671,6 @@ input, button, select, optgroup, textarea {
   white-space: -o-pre-wrap;
   white-space: -moz-pre-wrap;
   word-break: break-all;
-  text-align: center;
 }
 
 .horizontal-bar {
@@ -3177,6 +3176,15 @@ select {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   background-color: transparent;
+}
+
+.user-name {
+  display: inline-block;
+  max-width: 8.75rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  word-wrap: normal;
 }
 
 .document-color-circle {
