--- a/src/main/resources/public/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/scss/theme/default/_layout.scss
@@ -108,6 +108,11 @@
   background-color: transparent;
 }
 
+//작성자 말줄임
+.user-name {
+  @include ellipsis(inline-block, 8.75rem); // 140px
+}
+
 // 리스트 출력용 컬러 아이콘
 .document-color-circle {
   width: $document-color-size;
