--- a/src/main/resources/public/template/board/boardArticlesView.html
+++ b/src/main/resources/public/template/board/boardArticlesView.html
@@ -13,7 +13,7 @@
 </div>
 <div layout:fragment="pageView">
     <div class="flex-column z-view-row">
-        <div class="view-title text-ellipsis">
+        <div class="view-title text-wordWarp">
             <span th:if="${boardAdminInfo.categoryYn && not #strings.isEmpty(boardInfo?.boardCategoryName)}"
                   th:text="#{common.label.bracketOpen}+${boardInfo?.boardCategoryName}+#{common.label.bracketClose}"></span>
             <span th:text="${boardInfo?.boardTitle}"></span>
@@ -21,7 +21,7 @@
     </div>
     <div class="flex-column z-view-row">
         <div class="view-sub-title flex-row justify-content-end">
-            <span class="user-name"
+            <span class="text-wordWarp"
                   th:text="${boardInfo?.createUser} ? ${boardInfo.createUser.userName} : ''"></span>
             <span class="vertical-bar"></span>
             <span id="spanCreateDt" th:text="${boardInfo?.createDt}"></span>
