--- a/src/main/resources/public/template/download/downloadView.html
+++ b/src/main/resources/public/template/download/downloadView.html
@@ -12,11 +12,11 @@
 </div>
 <div layout:fragment="pageView">
     <div class="flex-column z-view-row">
-        <div class="view-title text-ellipsis" th:text="${download.downloadTitle}"></div>
+        <div class="view-title text-wordWarp" th:text="${download.downloadTitle}"></div>
     </div>
     <div class="flex-column z-view-row">
         <div class="view-sub-title flex-row justify-content-end">
-            <span class="user-name" th:text="${download?.createUserName}"></span>
+            <span class="text-wordWarp" th:text="${download?.createUserName}"></span>
             <span class="vertical-bar"></span>
             <span id="spanCreateDt" th:text="${download?.createDt}"></span>
         </div>
