--- a/src/main/resources/public/template/notice/noticeView.html
+++ b/src/main/resources/public/template/notice/noticeView.html
@@ -15,8 +15,8 @@
         <div class="view-title text-wordWarp" th:text="${notice?.noticeTitle}"></div>
     </div>
     <div class="flex-column z-view-row">
-        <div class="view-sub-title flex-row justify-content-end">
-            <span class="user-name" id="spanUserName" th:text="${notice?.createUserName}"></span>
+        <div class="view-sub-title flex-row justify-content-end text-wordWarp">
+            <span class="text-wordWarp" id="spanUserName" th:text="${notice?.createUserName}"></span>
             <span class="vertical-bar"></span>
             <span id="spanCreateDt" th:text="${notice.createDt}"></span>
         </div>
