#11243 - [ 공지사항 ] 상세조회 화면 date값도 작성자명에 맞춰서 같이 줄바꿈 되는 현상 제거
공지사항 뿐만아니라 faq, 자료실, 게시판도 같이 css를 적용하여 수정하였습니다. ( class="date-vertical-align" 추가 )

--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -674,6 +674,11 @@ input, button, select, optgroup, textarea {
   word-break: break-all;
 }
 
+.date-vertical-align {
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
 .horizontal-bar {
   height: 0.0625rem;
   margin: 0.9375rem 0;
