--- a/src/main/resources/public/template/board/boardArticlesView.html
+++ b/src/main/resources/public/template/board/boardArticlesView.html
@@ -24,7 +24,7 @@
             <span class="text-wordWarp"
                   th:text="${boardInfo?.createUser} ? ${boardInfo.createUser.userName} : ''"></span>
             <span class="vertical-bar"></span>
-            <span id="spanCreateDt" th:text="${boardInfo?.createDt}"></span>
+            <span class="date-vertical-align" id="spanCreateDt" th:text="${boardInfo?.createDt}"></span>
         </div>
     </div>
     <div class="horizontal-bar"></div>
