--- a/src/main/resources/public/template/download/downloadView.html
+++ b/src/main/resources/public/template/download/downloadView.html
@@ -18,7 +18,7 @@
         <div class="view-sub-title flex-row justify-content-end">
             <span class="text-wordWarp" th:text="${download?.createUserName}"></span>
             <span class="vertical-bar"></span>
-            <span id="spanCreateDt" th:text="${download?.createDt}"></span>
+            <span class="date-vertical-align" id="spanCreateDt" th:text="${download?.createDt}"></span>
         </div>
     </div>
     <div class="horizontal-bar"></div>
