#11243 - [ 공지사항 ] 상세조회 화면 date값도 작성자명에 맞춰서 같이 줄바꿈 되는 현상 제거
추가 수정사항 수정완료(
  * 클래스 이름변경 [ .date-vertical-align -> .text-wordNoWrap ]
  * vertical-align 삭제
  * 오타수정
  * 포탈의 view부분 클래스추가

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -664,7 +664,7 @@ input, button, select, optgroup, textarea {
   word-wrap: normal;
 }
 
-.text-wordWarp {
+.text-wordWrap {
   overflow-wrap: break-word;
   word-wrap: break-word;
   white-space: pre-line;
@@ -673,8 +673,7 @@ input, button, select, optgroup, textarea {
   word-break: break-all;
 }
 
-.date-vertical-align {
-  vertical-align: middle;
+.text-wordNoWrap {
   white-space: nowrap;
 }
 
