#9202 개인현황판 구현(초안)

--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -220,7 +220,14 @@
       &-count {
         margin-bottom: 0.9375rem; // 15px
       }
+
+      &-header-type { color: $black; }
+
       &-type { color: $gray500; }
+
+      &-table {
+        width: 100%;
+      }
     }
     // 대시보드 > 처리할 문서
     .scroll-wrap {
