--- a/src/main/resources/public/template/layout/topMenu.html
+++ b/src/main/resources/public/template/layout/topMenu.html
@@ -52,7 +52,7 @@
         hiddenProgressBar();
         setInterval(function () {
             getNotificationList(true);
-        }, 60000); // 60초 주기
+        }, aliceJs.autoRefreshPeriod); // 60초 주기
         getNotificationList(true);
 
         document.addEventListener('click', notificationContainerOff, false);
